RFC-2396 URL encode Remove unused imports Added ElfSkin for test